--- a/index.html
+++ b/index.html
@@ -4,24 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>학교상징물</title>
+    <style>
+        .left-img {
+            float: left;
+            margin-left: 5px;
+            width: auto;
+            height: 105px;
+        }
+    </style>
 </head>
 <body>
+    <img src="images/공주대.png" class="left-img"><br>
     <h2>학교상징물</h2>
+    <br>
     <ul>
         <li>교목</li>
         <ul>
             <li>은행나무</li>
-            <img src="images/은행나무.jpg" width="400" height="300">
+            <img src="images/은행나무.jpg" width="400" height="250">
         </ul>
         <li>교화</li>
-        <ul>
+        <ul class="right-img">
             <li>백목련</li>
-            <img src="images/백목련.jpg" width="400" height="300">
+            <img src="images/백목련.jpg" width="400" height="250">
         </ul>
         <li>상징동물</li>
         <ul>
             <li>곰</li>
-            <img src="images/곰.jpg" width="400" height="300">
+            <img src="images/곰.jpg" width="400" height="250">
+        </ul>
+        <li>대표캐릭터</li>
+        <ul>
+            <li>크농이</li>
+            <img src="images/크농이.jpeg" width="330" height="400">
         </ul>
     </ul>
 </body>
